fixed NULL values

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "51bd7929",
    "metadata": {},
    "outputs": [],
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "84c59a28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\ncursor.execute(\"CREATE TABLE IF NOT EXISTS molecules (zinc_name text, name text, mwt real, logp real,               formula text, rings int, heavy_atoms int, hetero_atoms int, fraction_sp3 real,               smiles text, label1 text, charge1 int, Hbond_donors1 int, Hbond_acceptors1 int,               tPSA1 real, rotatable_bonds1 int, apolar_des1 real, polar_des1 real, label2 text,               charge2 int, Hbond_donors2 int, Hbond_acceptors2 int, tPSA2 real, rotatable_bonds2 int,               apolar_des2 real, polar_des2 real, label3 text, charge3 int, Hbond_donors3 int,               Hbond_acceptors3 int, tPSA3 real, rotatable_bonds3 int, apolar_des3 real,               polar_des3 real, label4 text, charge4 int, Hbond_donors4 int, Hbond_acceptors4 int,               tPSA4 real, rotatable_bonds4 int, apolar_des4 real, polar_des4 real, RDmwt real,               RDhba int, RDhbd int, RDrotatable int, RDtpsa real, RDcsp3 real, RDCfraction real)\")               \\n'"
+       "<sqlite3.Cursor at 0x25558637540>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "33ec3cb1",
    "metadata": {},
    "outputs": [],
@@ -109,37 +109,37 @@
     "    try:\n",
     "        molecule = Chem.MolFromSmiles(smiles)\n",
     "    except:\n",
-    "        molecule = 'NULL'\n",
-    "        RDmwt = 'NULL'\n",
-    "        RDhba = 'NULL'\n",
-    "        RDhbd = 'NULL'\n",
-    "        RDrotatable = 'NULL'\n",
-    "        RDtpsa = 'NULL'\n",
-    "        RDcsp3 = 'NULL'\n",
-    "        RDCfraction = 'NULL'\n",
+    "        molecule = None\n",
+    "        RDmwt = None\n",
+    "        RDhba = None\n",
+    "        RDhbd = None\n",
+    "        RDrotatable = None\n",
+    "        RDtpsa = None\n",
+    "        RDcsp3 = None\n",
+    "        RDCfraction = None\n",
     "    \n",
-    "    if molecule != 'NULL':\n",
+    "    if molecule != None:\n",
     "        # get molecular weight\n",
     "        try: RDmwt = float(descriptors.CalcExactMolWt(molecule))\n",
-    "        except: RDmwt = 'NULL'\n",
+    "        except: RDmwt = None\n",
     "        # get the number of hydrogen atoms able to engage in hydrogen bonds\n",
     "        try: RDhbd = int(descriptors.CalcNumHBD(molecule))\n",
-    "        except: RDhbd = 'NULL'\n",
+    "        except: RDhbd = None\n",
     "        # get the number of hetero-atoms able to engage in hydrogen bonds\n",
     "        try: RDhba = int(descriptors.CalcNumHBA(molecule))\n",
-    "        except: RDhba = 'NULL'\n",
+    "        except: RDhba = None\n",
     "        # get Topologic Polar Surface Area (the sum of van-Der-Waals surface of polar atoms)\n",
     "        try: RDtpsa = float(descriptors.CalcTPSA(molecule))\n",
-    "        except: RDtpsa = 'NULL'\n",
+    "        except: RDtpsa = None\n",
     "        # get the number of non-terminal sigma-bonds that are not part of a cycle\n",
     "        try: RDrotatable = int(descriptors.CalcNumRotatableBonds(molecule))\n",
-    "        except: RDrotatable = 'NULL'\n",
+    "        except: RDrotatable = None\n",
     "        # get number of sp3 hybridized carbons divided by the total number of carbons in the molecule \n",
     "        try: RDcsp3 = float(descriptors.CalcFractionCSP3(molecule))\n",
-    "        except: RDcsp3 = 'NULL'\n",
+    "        except: RDcsp3 = None\n",
     "        # get fraction of heavy atoms that are carbons \n",
     "        try: RDCfraction = float(len(molecule.GetAtomsMatchingQuery(rdqueries.AtomNumEqualsQueryAtom(6)))/molecule.GetNumAtoms())\n",
-    "        except: RDCfraction = 'NULL'\n",
+    "        except: RDCfraction = None\n",
     "        \n",
     "    return RDmwt, RDhba, RDhbd, RDrotatable, RDtpsa, RDcsp3, RDCfraction"
    ]
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d396c27b",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
     "    if len(names)>1: #2. commercial name\n",
     "        name = names[1] \n",
     "    else: \n",
-    "        name = 'NULL' \n",
+    "        name = None \n",
     "    \n",
     "    # get molecular weight and partition coefficient (logP)\n",
     "    try: \n",
@@ -186,10 +186,10 @@
     "        print('no molecular weight or logP for: ' + link)\n",
     "    # molecular weight\n",
     "    try: mwt = float(parameters1[3].text)\n",
-    "    except: mwt = 'NULL'\n",
+    "    except: mwt = None\n",
     "    # partition coefficient\n",
     "    try: logP = float(parameters1[4].text)\n",
-    "    except: logP = 'NULL'\n",
+    "    except: logP = None\n",
     "    \n",
     "    # get more structural parameters (if available):\n",
     "    try:\n",
@@ -198,25 +198,25 @@
     "        print('further structural parameters (rings, heavy atoms, etc.) not available for: '+link)\n",
     "    # get chemical formula    \n",
     "    try: formula = parameters2[0].text\n",
-    "    except:formula = 'NULL'\n",
+    "    except:formula = None\n",
     "    # get number of rings\n",
     "    try: rings = parameters2[1].text\n",
-    "    except: rings = 'NULL'\n",
+    "    except: rings = None\n",
     "    # get number of non-hydrogen atoms\n",
     "    try: heavy_atoms = parameters2[2].text\n",
-    "    except: heavy_atoms = 'NULL'\n",
+    "    except: heavy_atoms = None\n",
     "    # get number of atoms excluding H anc C\n",
     "    try: hetero_atoms = parameters2[3].text\n",
-    "    except: hetero_atoms = 'NULL'\n",
+    "    except: hetero_atoms = None\n",
     "    # get number of sp3 hybridized carbons divided by the total number of carbons in the molecule \n",
     "    try: fraction_sp3 = parameters2[4].text\n",
-    "    except: fraction_sp3 = 'NULL'\n",
+    "    except: fraction_sp3 = None\n",
     "      \n",
     "    # get SMILES\n",
     "    try:\n",
     "        smiles = page_root_element.select('.input-sm > input')[0].get('value')\n",
     "    except:\n",
-    "        smiles = 'NULL'\n",
+    "        smiles = None\n",
     "        print('SMILES not available for: '+link)\n",
     "    \n",
     "    # let's use the SMILES to get additional parameters with RDKit\n",
@@ -228,37 +228,37 @@
     "   \n",
     "        # initialize pH dependent parameters with NULLs \n",
     "        # (because entries exist not for all pH values: Reference, Low, Mid, High)\n",
-    "        label1 = charge1 = Hbond_donors1 = Hbond_acceptors1 = tPSA1 = rotatable_bonds1 = apolar_des1 = polar_des1 = 'NULL'\n",
-    "        label2 = charge2 = Hbond_donors2 = Hbond_acceptors2 = tPSA2 = rotatable_bonds2 = apolar_des2 = polar_des2 = 'NULL'\n",
-    "        label3 = charge3 = Hbond_donors3 = Hbond_acceptors3 = tPSA3 = rotatable_bonds3 = apolar_des3 = polar_des3 = 'NULL'\n",
-    "        label4 = charge4 = Hbond_donors4 = Hbond_acceptors4 = tPSA4 = rotatable_bonds4 = apolar_des4 = polar_des4 = 'NULL'\n",
+    "        label1 = charge1 = Hbond_donors1 = Hbond_acceptors1 = tPSA1 = rotatable_bonds1 = apolar_des1 = polar_des1 = None\n",
+    "        label2 = charge2 = Hbond_donors2 = Hbond_acceptors2 = tPSA2 = rotatable_bonds2 = apolar_des2 = polar_des2 = None\n",
+    "        label3 = charge3 = Hbond_donors3 = Hbond_acceptors3 = tPSA3 = rotatable_bonds3 = apolar_des3 = polar_des3 = None\n",
+    "        label4 = charge4 = Hbond_donors4 = Hbond_acceptors4 = tPSA4 = rotatable_bonds4 = apolar_des4 = polar_des4 = None\n",
     "    \n",
     "        for protomer in parameters3:\n",
     "            param = protomer.select('td')\n",
     "            # get pH information\n",
     "            try: label = param[0].text.strip()\n",
-    "            except: label = 'NULL'\n",
+    "            except: label = None\n",
     "            # get the overall charge of the molecule at the given pH\n",
     "            try: charge = int(param[1].text)\n",
-    "            except: charge = 'NULL'\n",
+    "            except: charge = None\n",
     "            # get the number of hydrogen atoms able to engage in hydrogen bonds\n",
     "            try: Hbond_donors = int(param[2].text)\n",
-    "            except: Hbond_donors = 'NULL'\n",
+    "            except: Hbond_donors = None\n",
     "            # get the number of hetero-atoms able to engage in hydrogen bonds\n",
     "            try: Hbond_acceptors = int(param[3].text)\n",
-    "            except: Hbond_acceptors = 'NULL'\n",
+    "            except: Hbond_acceptors = None\n",
     "            # get Topologic Polar Surface Area (the sum of van-Der-Waals surface of polar atoms)\n",
     "            try: tPSA = float(param[4].text)\n",
-    "            except: tPSA = 'NULL'\n",
+    "            except: tPSA = None\n",
     "            # get the number of non-terminal sigma-bonds that are not part of a cycle\n",
     "            try: rotatable_bonds = int(param[5].text)\n",
-    "            except: rotatable_bonds = 'NULL'\n",
+    "            except: rotatable_bonds = None\n",
     "            # get apolar desolvation\n",
     "            try: apolar_des = float(param[6].text)\n",
-    "            except: apolar_des = 'NULL'\n",
+    "            except: apolar_des = None\n",
     "            # get polar desolvation\n",
     "            try: polar_des = float(param[7].text)\n",
-    "            except: polar_des = 'NULL'\n",
+    "            except: polar_des = None\n",
     "            \n",
     "            # assign values to the correct pH         \n",
     "            if param[0].text.strip().split()[0] == 'Reference':\n",
@@ -271,7 +271,7 @@
     "                label4, charge4, Hbond_donors4, Hbond_acceptors4, tPSA4, rotatable_bonds4, apolar_des4, polar_des4 = label, charge, Hbond_donors, Hbond_acceptors, tPSA, rotatable_bonds, apolar_des, polar_des\n",
     "        \n",
     "    except:\n",
-    "        parameters3 = 'NULL'\n",
+    "        parameters3 = None\n",
     "        print('no pH dependent parameters for: ' + link)\n",
     " \n",
     "    cursor.execute(\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "4bbdc873",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "b3434294",
    "metadata": {},
    "outputs": [
@@ -354,114 +354,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90301 904\n",
-      "90401 905\n",
-      "90501 906\n",
-      "90601 907\n",
-      "90701 908\n",
-      "90801 909\n",
-      "90901 910\n",
-      "91001 911\n",
-      "91101 912\n",
-      "91201 913\n",
-      "91301 914\n",
-      "91401 915\n",
-      "91501 916\n",
-      "91601 917\n",
-      "91701 918\n",
-      "91801 919\n",
-      "91901 920\n",
-      "92001 921\n",
-      "92101 922\n",
-      "92201 923\n",
-      "92301 924\n",
-      "92401 925\n",
-      "92501 926\n",
-      "92601 927\n",
-      "92701 928\n",
-      "92801 929\n",
-      "92901 930\n",
-      "93001 931\n",
-      "93101 932\n",
-      "93201 933\n",
-      "93301 934\n",
-      "93401 935\n",
-      "93501 936\n",
-      "93601 937\n",
-      "93701 938\n",
-      "93801 939\n",
-      "93901 940\n",
-      "94001 941\n",
-      "94101 942\n",
-      "94201 943\n",
-      "94301 944\n",
-      "94401 945\n",
-      "94501 946\n",
-      "94601 947\n",
-      "94701 948\n",
-      "94801 949\n",
-      "94901 950\n",
-      "95001 951\n",
-      "95101 952\n",
-      "95201 953\n",
-      "95301 954\n",
-      "95401 955\n",
-      "95501 956\n",
-      "95601 957\n",
-      "95701 958\n",
-      "95801 959\n",
-      "95901 960\n",
-      "96001 961\n",
-      "96101 962\n",
-      "96201 963\n",
-      "96301 964\n",
-      "96401 965\n",
-      "96501 966\n",
-      "96601 967\n",
-      "96701 968\n",
-      "96801 969\n",
-      "96901 970\n",
-      "97001 971\n",
-      "97101 972\n",
-      "97201 973\n",
-      "97301 974\n",
-      "97401 975\n",
-      "97501 976\n",
-      "97601 977\n",
-      "97701 978\n",
-      "97801 979\n",
-      "97901 980\n",
-      "98001 981\n",
-      "98101 982\n",
-      "98201 983\n",
-      "98301 984\n",
-      "98401 985\n",
-      "98501 986\n",
-      "98601 987\n",
-      "98701 988\n",
-      "98801 989\n",
-      "98901 990\n",
-      "99001 991\n",
-      "99101 992\n",
-      "99201 993\n",
-      "99301 994\n",
-      "99401 995\n",
-      "99501 996\n",
-      "99601 997\n",
-      "99701 998\n",
-      "99801 999\n",
-      "99901 1000\n",
-      "100001 1001\n",
-      "100101 1002\n",
-      "100201 1003\n",
-      "100301 1004\n",
-      "100401 1005\n",
-      "100501 1006\n",
-      "100601 1007\n",
-      "100701 1008\n",
-      "100801 1009\n",
-      "100901 1010\n",
-      "101001 1011\n"
+      "100 2\n",
+      "200 3\n",
+      "300 4\n",
+      "400 5\n",
+      "500 6\n",
+      "600 7\n",
+      "700 8\n",
+      "800 9\n",
+      "900 10\n",
+      "1000 11\n"
      ]
     },
     {
@@ -470,13 +372,13 @@
        "<function Connection.close()>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_molecules(101000)\n",
+    "get_molecules(1000)\n",
     "db.close"
    ]
   }
@@ -497,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
